# docstring-studio-pro

./: .coverage  .env.example  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  test-results.json
dashboard/: test_dashboard.jsx
docgen/: cli.py  generator.py  infer.py  parser.py  utils.py  writer.py
docgen/ai/: config.py  exceptions.py  fallback.py  gemini_client.py  groq_client.py  metrics.py  openai_client.py  router.py  service.py  utils.py
docgen/templates/: base.py  google.py  numpy.py  registry.py  rest.py
docgen/validator/: _init_.py  config.py  models.py  pep257_basic.py  pydocstyle_engine.py  service.py
docs/: Docstring_Studio_Pro_Documentation.docx  Docstring_Studio_Pro_Presentation.pptx
docstring_studio_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_generation.py  test_integration.py  test_parser.py  test_ui.py  test_validation.py
ui/: app.py
